--- a/src/formularios/FCadCarro.form
+++ b/src/formularios/FCadCarro.form
@@ -143,7 +143,7 @@
       <Properties>
         <Property name="toolTipText" type="java.lang.String" value=""/>
         <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
-          <Color id="Cursor de Texto"/>
+          <Color id="Default Cursor"/>
         </Property>
       </Properties>
       <AccessibilityProperties>
